kubernetes/apps/prometheus/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: prometheus-ingress
  namespace: o11y
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`prometheus.sobrinho.pt`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: http-web
    - match: Host(`alertmanager.sobrinho.pt`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: http-web
  tls:
    secretName: prometheus-cert
